Correction to mailers
